# labDNS3

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  PROJECT.md  README.md  TASKS.md  docker-compose.yml  labdns-gui.sh  labdns.sh  pyproject.toml
.github/: FUNDING.yml
examples/: example.zone
examples/zones/: epic2.test.zone  example.test.zone  second.test.zone
src/labdns/: __init__.py  cli.py  config.py  dns_handler.py  resolver.py  server.py  zonefile.py
src/labdns.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_dns_handler.py  test_epic2_resolution.py  test_resolver.py  test_txt_multistring.py  test_zonefile.py  test_zones_dir.py
zones/: opnlab.dk.zone
