[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "labdns"
version = "0.1.0"
description = "labDNS 3.0 – lightweight, extensible DNS server in Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "labDNS Team" }
]
dependencies = [
  "dnslib>=0.9.25",
  "dnspython>=2.5",
  "click>=8.1"
]

[project.scripts]
labdns = "labdns.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
